Find LibreSSL on Windows, link with Windows system libraries.

--- a/external/librdkafka/CMakeLists.txt
+++ b/external/librdkafka/CMakeLists.txt
@@ -16,12 +16,22 @@ SET(PRJ_CMAKE_ARGS "")
 # Pass the toolchain file.
 LIST(APPEND PRJ_CMAKE_ARGS "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}")
 
+# Build the static version.
+LIST(APPEND PRJ_CMAKE_ARGS "-DRDKAFKA_BUILD_STATIC=ON")
+
+# Do not build the examples.
+LIST(APPEND PRJ_CMAKE_ARGS "-DRDKAFKA_BUILD_EXAMPLES=OFF")
+
+# Do not build the tests.
+LIST(APPEND PRJ_CMAKE_ARGS "-DRDKAFKA_BUILD_TESTS=OFF")
+
 # Use LibreSSL.
 LIST(APPEND PRJ_CMAKE_ARGS "-DWITH_SSL=ON")
 LIST(APPEND PRJ_CMAKE_ARGS "-DOPENSSL_FOUND=1")
 LIST(APPEND PRJ_CMAKE_ARGS "-DOPENSSL_INCLUDE_DIR=${CMAKE_BINARY_DIR}/libressl/install/include")
 LIST(APPEND PRJ_CMAKE_ARGS "-DOPENSSL_CRYPTO_LIBRARY=${CMAKE_BINARY_DIR}/libressl/install/lib/libcrypto.a")
 LIST(APPEND PRJ_CMAKE_ARGS "-DOPENSSL_SSL_LIBRARY=${CMAKE_BINARY_DIR}/libressl/install/lib/libssl.a")
+LIST(APPEND PRJ_CMAKE_ARGS "-DOPENSSL_ROOT_DIR=${CMAKE_BINARY_DIR}/libressl/install")
 
 # Set the CMake folder for zlib.
 LIST(APPEND PRJ_CMAKE_ARGS "-DWITH_ZLIB=ON")
