--- a/kafka/CMakeLists.txt
+++ b/kafka/CMakeLists.txt
@@ -52,10 +52,18 @@ IF((${BUILDCFG_ONLY_JONCHKI_CFG} STREQUAL "OFF"))
 	GET_TARGET_PROPERTY(RDKAFKA_LIBRARY RdKafka::rdkafka LOCATION)
 	MESSAGE("RDKAFKA_LIBRARY = ${RDKAFKA_LIBRARY}")
 
+	# Link with some libraries.
+	IF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
+		SET(PLATFORM_LIBS "ws2_32")
+	ELSE((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
+		SET(PLATFORM_LIBS "")
+	ENDIF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
+	MESSAGE("PLATFORM_LIBS = ${PLATFORM_LIBS}")
+
 	SET_SOURCE_FILES_PROPERTIES(kafka.i PROPERTIES CPLUSPLUS ON)
 	SET_SOURCE_FILES_PROPERTIES(kafka.i PROPERTIES SWIG_FLAGS "")
 	SWIG_ADD_MODULE(TARGET_kafka lua kafka.i wrapper.cpp)
-	SWIG_LINK_LIBRARIES(TARGET_kafka ${LUA_LIBRARIES} RdKafka::rdkafka)
+	SWIG_LINK_LIBRARIES(TARGET_kafka RdKafka::rdkafka ${LUA_LIBRARIES} ${PLATFORM_LIBS})
 	TARGET_INCLUDE_DIRECTORIES(TARGET_kafka
 	                           PRIVATE ${LUA_INCLUDE_DIR} ${CMAKE_BINARY_DIR}/swig_runtime ${CMAKE_CURRENT_SOURCE_DIR})
 	TARGET_COMPILE_DEFINITIONS(TARGET_kafka
