--- a/kafka/CMakeLists.txt
+++ b/kafka/CMakeLists.txt
@@ -63,7 +63,10 @@ IF((${BUILDCFG_ONLY_JONCHKI_CFG} STREQUAL "OFF"))
 	SET_SOURCE_FILES_PROPERTIES(kafka.i PROPERTIES CPLUSPLUS ON)
 	SET_SOURCE_FILES_PROPERTIES(kafka.i PROPERTIES SWIG_FLAGS "")
 	SWIG_ADD_MODULE(TARGET_kafka lua kafka.i wrapper.cpp)
-	SWIG_LINK_LIBRARIES(TARGET_kafka RdKafka::rdkafka ${LUA_LIBRARIES} ${PLATFORM_LIBS})
+	SWIG_LINK_LIBRARIES(TARGET_kafka RdKafka::rdkafka ${PLATFORM_LIBS})
+	IF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
+		SWIG_LINK_LIBRARIES(TARGET_kafka RdKafka::rdkafka ${LUA_LIBRARIES})
+	ENDIF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
 	TARGET_INCLUDE_DIRECTORIES(TARGET_kafka
 	                           PRIVATE ${LUA_INCLUDE_DIR} ${CMAKE_BINARY_DIR}/swig_runtime ${CMAKE_CURRENT_SOURCE_DIR})
 	TARGET_COMPILE_DEFINITIONS(TARGET_kafka
