Do not mix Python 2 and 3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,22 @@ MESSAGE("Building for: ${JONCHKI_PLATFORM}")
 # Enable tests (see here for details: http://www.vtk.org/Wiki/CMake/Testing_With_CTest)
 ENABLE_TESTING()
 
+# Python is used for the patch tool.
+# Python is used for some test scripts.
+IF(CMAKE_VERSION VERSION_LESS 3.12.0)
+	FIND_PACKAGE(PythonInterp 3 REQUIRED)
+	SET(PYTHON_INTERPRETER "${PYTHON_EXECUTABLE}")
+ELSE(CMAKE_VERSION VERSION_LESS 3.12.0)
+	FIND_PACKAGE(Python3 REQUIRED COMPONENTS Interpreter)
+	SET(PYTHON_INTERPRETER "${Python3_EXECUTABLE}")
+ENDIF(CMAKE_VERSION VERSION_LESS 3.12.0)
+
+
 # Set some installation folders.
 INCLUDE(cmake/muhkuh_installation_folders.cmake)
 
 OPTION(BUILDCFG_ONLY_JONCHKI_CFG "Build only the jonchki configuration. This is used for the resolve phase. The default is OFF."
        "OFF")
-
-#----------------------------------------------------------------------------
-#
-# Find all packages.
-#
-
-# Python is used for some test scripts.
-FIND_PACKAGE(PythonInterp 2.7 REQUIRED)
 
 #----------------------------------------------------------------------------
 #
