Disable Git safe directory.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - name: test1
-      run: whoami
-    - name: test2
-      run: id
-    - name: test3
-      run: ls -lR
+    - name: Disable Git safe directory
+      run: git config --system --add safe.directory '*'
     - name: Build
       run: ./build_artifact.py ${{ matrix.platform.distribution-id }} ${{ matrix.platform.distribution-version }} ${{ matrix.platform.cpu-architecture }}
     - name: Upload artifacts
